force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(PersonBirthdate) - 
IF(
  OR(
    MONTH(TODAY()) &lt; MONTH(PersonBirthdate), 
    AND(
      MONTH(TODAY()) = MONTH(PersonBirthdate), 
      DAY(TODAY()) &lt; DAY(PersonBirthdate)
    )
  ), 
  1, 
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>