force-app/main/default/objects/Account/fields/Associate_Email__c.field-meta.xml
<CustomField>
    <fullName>Associate_Email__c</fullName>
    <label>Associate Email</label>
    <type>Email</type>
</CustomField>