force-app/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KERN</fullName>
            </value>
            <value>
                <fullName>SAN BERNARDINO</fullName>
            </value>
            <value>
                <fullName>VENTURA</fullName>
            </value>
            <value>
                <fullName>IMPERIAL</fullName>
            </value>
            <value>
                <fullName>LOS ANGELES</fullName>
            </value>
            <value>
                <fullName>ORANGE</fullName>
            </value>
            <value>
                <fullName>RIVERSIDE</fullName>
            </value>
            <value>
                <fullName>SAN DIEGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>