force-app/main/default/objects/Account/fields/District_ID_Congress__c.field-meta.xml
<CustomField>
    <fullName>District_ID_Congress__c</fullName>
    <label>District ID Congress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA-20</fullName>
            </value>
            <value>
                <fullName>CA-23</fullName>
            </value>
            <value>
                <fullName>CA-24</fullName>
            </value>
            <value>
                <fullName>CA-25</fullName>
            </value>
            <value>
                <fullName>CA-26</fullName>
            </value>
            <value>
                <fullName>CA-27</fullName>
            </value>
            <value>
                <fullName>CA-28</fullName>
            </value>
            <value>
                <fullName>CA-29</fullName>
            </value>
            <value>
                <fullName>CA-30</fullName>
            </value>
            <value>
                <fullName>CA-31</fullName>
            </value>
            <value>
                <fullName>CA-32</fullName>
            </value>
            <value>
                <fullName>CA-35</fullName>
            </value>
            <value>
                <fullName>CA-36</fullName>
            </value>
            <value>
                <fullName>CA-38</fullName>
            </value>
            <value>
                <fullName>CA-39</fullName>
            </value>
            <value>
                <fullName>CA-40</fullName>
            </value>
            <value>
                <fullName>CA-41</fullName>
            </value>
            <value>
                <fullName>CA-42</fullName>
            </value>
            <value>
                <fullName>CA-43</fullName>
            </value>
            <value>
                <fullName>CA-44</fullName>
            </value>
            <value>
                <fullName>CA-45</fullName>
            </value>
            <value>
                <fullName>CA-46</fullName>
            </value>
            <value>
                <fullName>CA-47</fullName>
            </value>
            <value>
                <fullName>CA-48</fullName>
            </value>
            <value>
                <fullName>CA-49</fullName>
            </value>
            <value>
                <fullName>CA-50</fullName>
            </value>
            <value>
                <fullName>CA-51</fullName>
            </value>
            <value>
                <fullName>CA-52</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>