force-app/main/default/objects/Account/fields/District_ID_Senate__c.field-meta.xml
<CustomField>
    <fullName>District_ID_Senate__c</fullName>
    <label>District ID Senate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SD_12</fullName>
            </value>
            <value>
                <fullName>SD_19</fullName>
            </value>
            <value>
                <fullName>SD_21</fullName>
            </value>
            <value>
                <fullName>SD_18</fullName>
            </value>
            <value>
                <fullName>SD_27</fullName>
            </value>
            <value>
                <fullName>SD_23</fullName>
            </value>
            <value>
                <fullName>SD_25</fullName>
            </value>
            <value>
                <fullName>SD_20</fullName>
            </value>
            <value>
                <fullName>SD_22</fullName>
            </value>
            <value>
                <fullName>SD_28</fullName>
            </value>
            <value>
                <fullName>SD_24</fullName>
            </value>
            <value>
                <fullName>SD_30</fullName>
            </value>
            <value>
                <fullName>SD_34</fullName>
            </value>
            <value>
                <fullName>SD_31</fullName>
            </value>
            <value>
                <fullName>SD_37</fullName>
            </value>
            <value>
                <fullName>SD_32</fullName>
            </value>
            <value>
                <fullName>SD_33</fullName>
            </value>
            <value>
                <fullName>SD_35</fullName>
            </value>
            <value>
                <fullName>SD_36</fullName>
            </value>
            <value>
                <fullName>SD_40</fullName>
            </value>
            <value>
                <fullName>SD_38</fullName>
            </value>
            <value>
                <fullName>SD_39</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>