force-app/main/default/objects/Account/fields/District_ID_State_Assembly__c.field-meta.xml
<CustomField>
    <fullName>District_ID_State_Assembly__c</fullName>
    <label>District ID State Assembly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD_32</fullName>
            </value>
            <value>
                <fullName>AD_34</fullName>
            </value>
            <value>
                <fullName>AD_38</fullName>
            </value>
            <value>
                <fullName>AD_36</fullName>
            </value>
            <value>
                <fullName>AD_42</fullName>
            </value>
            <value>
                <fullName>AD_40</fullName>
            </value>
            <value>
                <fullName>AD_39</fullName>
            </value>
            <value>
                <fullName>AD_41</fullName>
            </value>
            <value>
                <fullName>AD_49</fullName>
            </value>
            <value>
                <fullName>AD_43</fullName>
            </value>
            <value>
                <fullName>AD_46</fullName>
            </value>
            <value>
                <fullName>AD_44</fullName>
            </value>
            <value>
                <fullName>AD_52</fullName>
            </value>
            <value>
                <fullName>AD_48</fullName>
            </value>
            <value>
                <fullName>AD_53</fullName>
            </value>
            <value>
                <fullName>AD_50</fullName>
            </value>
            <value>
                <fullName>AD_61</fullName>
            </value>
            <value>
                <fullName>AD_66</fullName>
            </value>
            <value>
                <fullName>AD_54</fullName>
            </value>
            <value>
                <fullName>AD_64</fullName>
            </value>
            <value>
                <fullName>AD_60</fullName>
            </value>
            <value>
                <fullName>AD_59</fullName>
            </value>
            <value>
                <fullName>AD_58</fullName>
            </value>
            <value>
                <fullName>AD_63</fullName>
            </value>
            <value>
                <fullName>AD_62</fullName>
            </value>
            <value>
                <fullName>AD_69</fullName>
            </value>
            <value>
                <fullName>AD_65</fullName>
            </value>
            <value>
                <fullName>AD_67</fullName>
            </value>
            <value>
                <fullName>AD_68</fullName>
            </value>
            <value>
                <fullName>AD_73</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>