force-app/main/default/objects/Account/fields/Envelopment_Name__c.field-meta.xml
<CustomField>
    <fullName>Envelopment_Name__c</fullName>
    <label>Envelopment Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>