force-app/main/default/objects/Account/fields/Grants_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Grants_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grants Relationship Manager</description>
    <label>Grants Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>