force-app/main/default/objects/Account/fields/Head_ID__c.field-meta.xml
<CustomField>
    <fullName>Head_ID__c</fullName>
    <label>Head ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>