force-app/main/default/objects/Account/fields/Informal_Name__c.field-meta.xml
<CustomField>
    <fullName>Informal_Name__c</fullName>
    <label>Informal Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>