force-app/main/default/objects/Account/fields/Is_My_Dev_RM_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Dev_RM_Account__c</fullName>
    <description>For use in reporting</description>
    <formula>Relationship_Manager_Development__c=$User.Id</formula>
    <label>Is My Dev RM Account</label>
    <type>Checkbox</type>
</CustomField>