force-app/main/default/objects/Account/fields/Issue_Area__c.field-meta.xml
<CustomField>
    <fullName>Issue_Area__c</fullName>
    <inlineHelpText>Legislative issue areas this legislator is active on. Mirrors the Issue Area global value set used by Committee - keep the two lists in sync when values change.</inlineHelpText>
    <label>Issue Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aging_And_Long_Term_Care</fullName>
                <label>Aging And Long-Term Care</label>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Appropriations</fullName>
            </value>
            <value>
                <fullName>Arts_Entertainment_Sports_And_Tourism</fullName>
                <label>Arts, Entertainment, Sports, And Tourism</label>
            </value>
            <value>
                <fullName>Banking_And_Finance</fullName>
                <label>Banking And Finance</label>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Business_And_Professions</fullName>
                <label>Business And Professions</label>
            </value>
            <value>
                <fullName>Communications_And_Conveyance</fullName>
                <label>Communications And Conveyance</label>
            </value>
            <value>
                <fullName>Economic_Development_Growth_And_Household_Impact</fullName>
                <label>Economic Development, Growth, And Household Impact</label>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Elections</fullName>
            </value>
            <value>
                <fullName>Emergency_Management</fullName>
                <label>Emergency Management</label>
            </value>
            <value>
                <fullName>Environmental_Safety_And_Toxic_Materials</fullName>
                <label>Environmental Safety And Toxic Materials</label>
            </value>
            <value>
                <fullName>Governmental_Organization</fullName>
                <label>Governmental Organization</label>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Higher_Education</fullName>
                <label>Higher Education</label>
            </value>
            <value>
                <fullName>Housing_And_Community_Development</fullName>
                <label>Housing And Community Development</label>
            </value>
            <value>
                <fullName>Human_Services</fullName>
                <label>Human Services</label>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Joint_Legislative_Audit_Committee</fullName>
                <label>Joint Legislative Audit Committee</label>
            </value>
            <value>
                <fullName>Judiciary</fullName>
            </value>
            <value>
                <fullName>Labor_And_Employment</fullName>
                <label>Labor And Employment</label>
            </value>
            <value>
                <fullName>Local_Government</fullName>
                <label>Local Government</label>
            </value>
            <value>
                <fullName>Military_And_Veterans_Affairs</fullName>
                <label>Military And Veterans Affairs</label>
            </value>
            <value>
                <fullName>Natural_Resources</fullName>
                <label>Natural Resources</label>
            </value>
            <value>
                <fullName>Privacy_And_Consumer_Protection</fullName>
                <label>Privacy And Consumer Protection</label>
            </value>
            <value>
                <fullName>Public_Employment_And_Retirement</fullName>
                <label>Public Employment And Retirement</label>
            </value>
            <value>
                <fullName>Public_Safety</fullName>
                <label>Public Safety</label>
            </value>
            <value>
                <fullName>Revenue_And_Taxation</fullName>
                <label>Revenue And Taxation</label>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>