force-app/main/default/objects/Account/fields/Last_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Interaction_Type__c</fullName>
    <inlineHelpText>Set automatically from the most recent Interaction. Do not edit.</inlineHelpText>
    <label>Last Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>