force-app/main/default/objects/Account/fields/Legislative_District__c.field-meta.xml
<CustomField>
    <fullName>Legislative_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legislative District</description>
    <label>Legislative District</label>
    <referenceTo>Legislative_District__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Legislator</relationshipName>
    <type>Lookup</type>
</CustomField>