force-app/main/default/objects/Account/fields/Member_IDs__c.field-meta.xml
<CustomField>
    <fullName>Member_IDs__c</fullName>
    <label>Member IDs</label>
    <length>40</length>
    <type>Text</type>
</CustomField>