force-app/main/default/objects/Account/fields/Month_Year_Modified__c.field-meta.xml
<CustomField>
    <fullName>Month_Year_Modified__c</fullName>
    <label>Month/Year Modified</label>
    <type>Date</type>
</CustomField>