force-app/main/default/objects/Account/fields/Participation_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Participation_Engagement__c</fullName>
    <label>Participation &amp; Engagement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting Relationship</fullName>
            </value>
            <value>
                <fullName>CVS Summer Campaign</fullName>
            </value>
            <value>
                <fullName>Disability Film Challenge</fullName>
            </value>
            <value>
                <fullName>Engaged Partner</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>ESSC Angels Night</fullName>
            </value>
            <value>
                <fullName>ESSC Vendor Partner</fullName>
            </value>
            <value>
                <fullName>Giving Tuesday</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>In-Kind Donor</fullName>
            </value>
            <value>
                <fullName>Month of Love</fullName>
            </value>
            <value>
                <fullName>Past Prospect</fullName>
            </value>
            <value>
                <fullName>Prospects</fullName>
            </value>
            <value>
                <fullName>Rex for Good @ Brea Seniors</fullName>
            </value>
            <value>
                <fullName>RSP Golf</fullName>
            </value>
            <value>
                <fullName>Strides for Disability</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>