force-app/main/default/objects/Account/fields/Partnership_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Engagement_Status__c</fullName>
    <inlineHelpText>Indicates how actively this partner engages with us, per Partnerships&apos; color criteria:
Red: Cold prospect. No interactions or engagement have occurred, or past engagement has ceased.
Yellow: Communicated at some point. Has expressed interest in partnership, or we&apos;re waiting to reach back out.
Blue: Communicating with us regularly, based on need. Engaged with us in a specific, defined way.
Green: Consistently communicating with us. Engaged with us in multiple ways.</inlineHelpText>
    <label>Partnership Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>