force-app/main/default/objects/Account/fields/Portal_Name__c.field-meta.xml
<CustomField>
    <fullName>Portal_Name__c</fullName>
    <description>Pairs with Portal URL for Grants Management</description>
    <label>Portal Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>