force-app/main/default/objects/Account/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <description>Portal URL for Grants Management</description>
    <label>Portal URL</label>
    <type>Url</type>
</CustomField>