force-app/main/default/objects/Account/fields/Relationship_Manager_Development__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Development__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager - Development</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>