force-app/main/default/objects/Account/fields/Relationship_Manager_Grants__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Grants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager - Grants</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>