force-app/main/default/objects/Account/fields/Relationship_Manager_Partnerships__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Partnerships__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager - Partnerships</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>