force-app/main/default/objects/Account/fields/Relationship_Stage__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Stage__c</fullName>
    <label>Relationship Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Ally</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Opposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>