force-app/main/default/objects/Account/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <inlineHelpText>Enter values 1-5</inlineHelpText>
    <label>Relationship Strength</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>