force-app/main/default/objects/Account/fields/Representative_Party__c.field-meta.xml
<CustomField>
    <fullName>Representative_Party__c</fullName>
    <label>Representative Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>