force-app/main/default/objects/Account/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult Day Services - N</fullName>
            </value>
            <value>
                <fullName>Adult Day Services - S</fullName>
            </value>
            <value>
                <fullName>Adult Day Services &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Adult Day Services - S &amp; Camp Oakes</fullName>
            </value>
            <value>
                <fullName>Autism Services</fullName>
            </value>
            <value>
                <fullName>Autism Services &amp; Child Dev. Services</fullName>
            </value>
            <value>
                <fullName>Autism Services/LO/MarCom</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Child Dev. Services</fullName>
            </value>
            <value>
                <fullName>Headquarters &amp; Autism Services</fullName>
            </value>
            <value>
                <fullName>Living Options</fullName>
            </value>
            <value>
                <fullName>Senior Services</fullName>
            </value>
            <value>
                <fullName>WorkFirst / Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>