force-app/main/default/objects/Account/fields/Sort_Name__c.field-meta.xml
<CustomField>
    <fullName>Sort_Name__c</fullName>
    <label>Sort Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>